Use URI in searchAllReferenceableLinks and use the method instead of search method